# gtk_file_viewer

./: .gitignore  README.md  builder.ui  example-1  example-4  example-4.c  example.c  lsan.supp  meson.build  tasks.py
src/: gtk_file_viewer.c  meson.build
src/frontend/: frontend.c  frontend.h  meson.build
src/frontend/_internal/: file_select_menu.c  file_select_menu.h  file_view.c  file_view.h  frontend.h  meson.build  old.c
src/utils/: file.h  memory.h
